--- a/index.html
+++ b/index.html
@@ -7,12 +7,41 @@
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.5/+esm"></script>
   <style>
-    body { font-family: sans-serif; text-align: center; padding: 40px; background: #f7f8fa; }
-    h1 { font-size: 22px; margin-bottom: 10px; }
-    #countdown { font-size: 36px; margin-bottom: 30px; }
-    .profile img { width: 64px; height: 64px; border-radius: 50%; margin-bottom: 10px; }
-    input { padding: 8px; width: 90%; margin-bottom: 20px; border-radius: 8px; border: 1px solid #ccc; }
-    a.button { display: inline-block; padding: 10px 20px; background: #0088cc; color: white; border-radius: 8px; text-decoration: none; }
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      padding: 40px;
+      background: #f7f8fa;
+    }
+    h1 {
+      font-size: 22px;
+      margin-bottom: 10px;
+    }
+    #countdown {
+      font-size: 36px;
+      margin-bottom: 30px;
+    }
+    .profile img {
+      width: 64px;
+      height: 64px;
+      border-radius: 50%;
+      margin-bottom: 10px;
+    }
+    input {
+      padding: 8px;
+      width: 90%;
+      margin-bottom: 20px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+    }
+    a.button {
+      display: inline-block;
+      padding: 10px 20px;
+      background: #0088cc;
+      color: white;
+      border-radius: 8px;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
@@ -54,7 +83,10 @@
     setInterval(tick, 1000);
     tick();
 
-    const supabase = createClient("https://fiuybsclifxxhnpkdcfj.supabase.co", "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZpdXlic2NsaWZ4eGhucGtkY2ZqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDgxNDY0NDksImV4cCI6MjA2MzcyMjQ0OX0.FMM504dMKv8DclfPeGtZS7pLja0YY6d7ODgyeRdDZgg");
+    const supabase = createClient(
+      "https://fiuybsclifxxhnpkdcfj.supabase.co",
+      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZpdXlic2NsaWZ4eGhucGtkY2ZqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDgxNDY0NDksImV4cCI6MjA2MzcyMjQ0OX0.FMM504dMKv8DclfPeGtZS7pLja0YY6d7ODgyeRdDZgg"
+    );
 
     const urlParams = new URLSearchParams(window.location.search);
     const refId = urlParams.get("ref");
@@ -72,19 +104,18 @@
       if (error) console.error("Ошибка сохранения:", error);
     }
 
-    const user = Telegram.WebApp.initDataUnsafe.user;
+    const user = tg.initDataUnsafe?.user;
 
-if (user) {
-  avatar.src = user.photo_url;
-  usernameEl.innerText = "@" + user.username;
-  useridEl.innerText = user.id;
-  profile.style.display = "block";
-  refInput.value = `${window.location.origin}?ref=${user.id}`;
-  saveUser(user);
-} else {
-  alert("Ошибка: пользователь не найден. Открой мини-апп через Telegram.");
-}
-
+    if (user) {
+      avatar.src = user.photo_url;
+      usernameEl.innerText = "@" + user.username;
+      useridEl.innerText = user.id;
+      profile.style.display = "block";
+      refInput.value = `${window.location.origin}?ref=${user.id}`;
+      saveUser(user);
+    } else {
+      alert("❗ Пожалуйста, открой мини-приложение через Telegram, чтобы увидеть профиль.");
+    }
   </script>
 </body>
 </html>
