Обновлён leaderboard: кнопка назад и реальная логика

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -8,13 +8,36 @@
   <style>
     body { font-family: sans-serif; padding: 20px; background: #f7f8fa; }
     h1 { text-align: center; margin-bottom: 20px; }
-    .user { display: flex; align-items: center; margin-bottom: 12px; padding: 10px; background: #fff; border-radius: 8px; box-shadow: 0 0 4px rgba(0,0,0,0.1); }
-    .user img { width: 48px; height: 48px; border-radius: 50%; margin-right: 12px; }
+    .back-button {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      background: none;
+      border: none;
+      font-size: 24px;
+      cursor: pointer;
+    }
+    .user {
+      display: flex;
+      align-items: center;
+      margin-bottom: 12px;
+      padding: 10px;
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 0 4px rgba(0,0,0,0.1);
+    }
+    .user img {
+      width: 48px;
+      height: 48px;
+      border-radius: 50%;
+      margin-right: 12px;
+    }
     .user-info { flex-grow: 1; }
     .user-referrals { font-weight: bold; }
   </style>
 </head>
 <body>
+  <button class="back-button" onclick="window.history.back()">⬅️</button>
   <h1>🏆 Топ 100 лидеров</h1>
   <div id="list">Загрузка...</div>
 
@@ -29,15 +52,13 @@
     const list = document.getElementById('list');
     list.innerHTML = 'Загрузка...';
 
-    const { data: allUsers, error } = await supabase
-      .from("users")
-      .select("telegram_id, username, photo_url, referred_by");
+    try {
+      const { data: allUsers, error } = await supabase
+        .from("users")
+        .select("telegram_id, username, photo_url, referred_by");
 
-    list.innerHTML = '';
+      if (error) throw error;
 
-    if (error) {
-      list.innerHTML = 'Ошибка загрузки: ' + error.message;
-    } else {
       const leaderboard = allUsers
         .map(user => ({
           ...user,
@@ -47,6 +68,7 @@
         .sort((a, b) => b.referrals - a.referrals)
         .slice(0, 100);
 
+      list.innerHTML = '';
       leaderboard.forEach((user, index) => {
         const el = document.createElement('div');
         el.className = 'user';
@@ -62,6 +84,9 @@
         `;
         list.appendChild(el);
       });
+    } catch (err) {
+      console.error(err);
+      list.innerHTML = 'Ошибка загрузки: ' + err.message;
     }
   </script>
 </body>
