--- a/leaderboard.html
+++ b/leaderboard.html
@@ -6,58 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script type="module" src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm"></script>
   <style>
-    body { font-family: sans-serif; padding: 20px; background: #f7f8fa; }
-    h1 { text-align: center; margin-bottom: 20px; }
-    .back-button {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      background: none;
-      border: none;
-      font-size: 24px;
-      cursor: pointer;
-    }
-    .user {
-      display: flex;
-      align-items: center;
-      margin-bottom: 12px;
-      padding: 10px;
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 0 4px rgba(0,0,0,0.1);
-    }
-    .user img {
-      width: 48px;
-      height: 48px;
-      border-radius: 50%;
-      margin-right: 12px;
-    }
-    .user-info { flex-grow: 1; }
-    .user-referrals { font-weight: bold; }
-  </style>
-</head>
-<body>
-  <button class="back-button" onclick="window.history.back()">⬅️</button>
-  <h1>🏆 Топ 100 лидеров</h1>
-  <div id="list">Загрузка...</div>
-
-  <script type="module">
-    import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
-
-    const supabase = createClient(
-      'https://fiuybsclifxxhnpkdcfj.supabase.co',
-      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZpdXlic2NsaWZ4eGhucGtkY2ZqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDgxNDY0NDksImV4cCI6MjA2MzcyMjQ0OX0.FMM504dMKv8DclfPeGtZS7pLja0YY6d7ODgyeRdDZgg'
-    );
-
-    const list = document.getElementById('list');
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8" />
-  <title>Таблица лидеров</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script type="module" src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm"></script>
-  <style>
     body {
       font-family: sans-serif;
       padding: 20px;
@@ -126,17 +74,16 @@
     try {
       const { data: allUsers, error } = await supabase
         .from("users")
-        .select("telegram_id, username, first_name, last_name, photo_url, referred_by");
+        .select("telegram_id, username, photo_url, referred_by");
 
       if (error) throw error;
 
       const leaderboard = allUsers
         .map(user => ({
           ...user,
-          name: [user.first_name, user.last_name].filter(Boolean).join(" ") || user.username || "Без имени",
+          name: user.username || "Без имени",
           referrals: allUsers.filter(u => u.referred_by === user.telegram_id).length
         }))
-        .filter(u => u.telegram_id)
         .sort((a, b) => b.referrals - a.referrals)
         .slice(0, 100);
 
@@ -154,7 +101,7 @@
           <div class="user-info">
             <div>${user.name}</div>
             <div class="user-referrals">
-              👥 ${user.referrals} ${index < 25 ? ' 🏶' : ''}
+              👥 ${user.referrals} ${index < 25 ? ' 🎁' : ''}
             </div>
           </div>
         `;
