--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       const MESSAGE_ID = 6;
 
       shareBtn.onclick = () => {
-        tg.openTelegramLink(`https://t.me/share/inline?bot=GiftsCalendar_bot&message_id=${MESSAGE_ID}`);
+        tg.openTelegramLink("https://t.me/share/inline?bot=GiftsCalendar_bot&message_id=6");
       };
 
       const urlParams = new URLSearchParams(window.location.search);
