--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       justify-content: center;
       gap: 10px;
       margin-bottom: 20px;
+      flex-wrap: wrap;
     }
     .invite-button, .share-button {
       display: inline-flex;
@@ -76,16 +77,14 @@
     <button class="invite-button" id="copyBtn">
       Пригласить
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-              d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-4 4h4a2 2 0 012 2v6a2 2 0 01-2 2h-8a2 2 0 01-2-2v-6a2 2 0 012-2z" />
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-4 4h4a2 2 0 012 2v6a2 2 0 01-2 2h-8a2 2 0 01-2-2v-6a2 2 0 012-2z" />
       </svg>
     </button>
 
     <button class="share-button" id="shareBtn">
       Поделиться
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-              d="M15 8a3 3 0 11-6 0 3 3 0 016 0zm6 6a3 3 0 11-6 0 3 3 0 016 0zm-6 6a3 3 0 11-6 0 3 3 0 016 0z" />
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 8a3 3 0 11-6 0 3 3 0 016 0zm6 6a3 3 0 11-6 0 3 3 0 016 0zm-6 6a3 3 0 11-6 0 3 3 0 016 0z" />
       </svg>
     </button>
   </div>
@@ -148,11 +147,8 @@
         });
       };
 
-      // 🔁 Вставь СВОЙ message_id ниже (после запуска bot.py)
-      const MESSAGE_ID = 6;
-
       shareBtn.onclick = () => {
-        tg.openTelegramLink("https://t.me/share/inline?bot=GiftsCalendar_bot&message_id=6");
+        tg.shareGame?.('GiftsCalendar_bot') || tg.openTelegramLink(refLink);
       };
 
       const urlParams = new URLSearchParams(window.location.search);
@@ -174,7 +170,7 @@
         if (error) console.error("Ошибка при сохранении:", error);
       }
     } else {
-      alert("❗ Открой мини-приложение через Telegram. Данные не получены.");
+      alert("\u2757 Открой мини-приложение через Telegram. Данные не получены.");
     }
   </script>
 </body>
