--- a/index.html
+++ b/index.html
@@ -73,8 +73,21 @@
   </div>
 
   <div class="button-row">
-    <button class="invite-button" id="copyBtn">Пригласить ✅</button>
-    <button class="share-button" id="shareBtn">Поделиться 📤</button>
+    <button class="invite-button" id="copyBtn">
+      Пригласить
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-4 4h4a2 2 0 012 2v6a2 2 0 01-2 2h-8a2 2 0 01-2-2v-6a2 2 0 012-2z" />
+      </svg>
+    </button>
+
+    <button class="share-button" id="shareBtn">
+      Поделиться
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M15 8a3 3 0 11-6 0 3 3 0 016 0zm6 6a3 3 0 11-6 0 3 3 0 016 0zm-6 6a3 3 0 11-6 0 3 3 0 016 0z" />
+      </svg>
+    </button>
   </div>
 
   <a href="leaderboard.html" class="button">Таблица лидеров</a>
@@ -87,9 +100,10 @@
 
     const supabase = createClient(
       'https://fiuybsclifxxhnpkdcfj.supabase.co',
-      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...'
+      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZpdXlic2NsaWZ4eGhucGtkY2ZqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDgxNDY0NDksImV4cCI6MjA2MzcyMjQ0OX0.FMM504dMKv8DclfPeGtZS7pLja0YY6d7ODgyeRdDZgg'
     );
 
+    const profile = document.getElementById('profile');
     const avatar = document.getElementById('avatar');
     const nameEl = document.getElementById('name');
     const copyBtn = document.getElementById('copyBtn');
@@ -110,42 +124,61 @@
     tick();
 
     const user = tg.initDataUnsafe?.user;
+
     if (user) {
       const fullName = [user.first_name, user.last_name].filter(Boolean).join(' ');
       avatar.src = user.photo_url;
       nameEl.innerText = fullName;
-      document.getElementById('profile').style.display = 'block';
+      profile.style.display = "block";
 
       const refLink = `https://t.me/GiftsCalendar_bot?startapp=ref${user.id}`;
-      const sharedMsgLink = `https://t.me/adventon/12`; // 👈 сюда вставь ID готового сообщения из канала
 
       copyBtn.onclick = () => {
         navigator.clipboard.writeText(refLink).then(() => {
           copyBtn.classList.add("copied");
-          copyBtn.innerText = 'Скопировано ✓';
+          copyBtn.innerHTML = 'Скопировано ✓';
           setTimeout(() => {
             copyBtn.classList.remove("copied");
-            copyBtn.innerText = 'Пригласить ✅';
+            copyBtn.innerHTML = `Пригласить
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                      d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-4 4h4a2 2 0 012 2v6a2 2 0 01-2 2h-8a2 2 0 01-2-2v-6a2 2 0 012-2z" />
+              </svg>`;
           }, 2000);
         });
       };
 
+      // Вариант пересылки сообщения, отправленного ботом заранее
+      const MESSAGE_ID = 6;
       shareBtn.onclick = () => {
-        tg.openTelegramLink(sharedMsgLink);
+        tg.openTelegramLink(`https://t.me/share/inline?bot=GiftsCalendar_bot&message_id=${MESSAGE_ID}`);
       };
 
       const urlParams = new URLSearchParams(window.location.search);
       const refId = Number(urlParams.get("ref"));
 
-      const { data: exists } = await supabase.from("users").select("id").eq("telegram_id", user.id).single();
-      if (!exists && user.id !== refId) {
-        await supabase.from("users").insert({
+      const { data: existingUser } = await supabase
+        .from("users")
+        .select("id")
+        .eq("telegram_id", user.id)
+        .single();
+
+      if (!existingUser && user.id !== refId) {
+        const { error } = await supabase.from("users").insert({
           telegram_id: user.id,
           username: user.username,
           photo_url: user.photo_url,
           referred_by: refId || null
         });
+        if (error) console.error("Ошибка при сохранении:", error);
       }
+    } else {
+      alert("❗ Открой мини-приложение через Telegram. Данные не получены.");
+    }
+  </script>
+</body>
+</html>
+
     }
   </script>
 </body>
