--- a/leaderboard.html
+++ b/leaderboard.html
@@ -7,43 +7,22 @@
   <script type="module" src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm"></script>
   <style>
     body {
-      font-family: sans-serif;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f1f3f6;
       padding: 20px;
-      background: #f7f8fa;
+      margin: 0;
+      color: #333;
       max-width: 600px;
-      margin: auto;
+      margin-inline: auto;
     }
+
     h1 {
       text-align: center;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
+      font-size: 24px;
+      color: #222;
     }
-    .user {
-      display: flex;
-      align-items: center;
-      margin-bottom: 12px;
-      padding: 10px;
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 0 4px rgba(0,0,0,0.1);
-    }
-    .user img {
-      width: 48px;
-      height: 48px;
-      border-radius: 50%;
-      margin-right: 12px;
-    }
-    .user-info {
-      flex-grow: 1;
-    }
-    .user-rank {
-      font-weight: bold;
-      margin-right: 8px;
-      min-width: 28px;
-    }
-    .user-referrals {
-      font-size: 14px;
-      color: #333;
-    }
+
     .back-button {
       position: fixed;
       top: 20px;
@@ -52,6 +31,68 @@
       border: none;
       font-size: 24px;
       cursor: pointer;
+    }
+
+    .user {
+      display: flex;
+      align-items: center;
+      background: white;
+      border-radius: 12px;
+      padding: 12px 16px;
+      margin-bottom: 14px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.08);
+      transition: all 0.2s ease-in-out;
+    }
+
+    .user:hover {
+      transform: scale(1.01);
+    }
+
+    .user img {
+      width: 56px;
+      height: 56px;
+      border-radius: 50%;
+      margin-right: 12px;
+      object-fit: cover;
+      border: 2px solid #ddd;
+    }
+
+    .user-info {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-grow: 1;
+      flex-wrap: wrap;
+    }
+
+    .user-name {
+      font-size: 16px;
+      font-weight: 600;
+      margin-right: auto;
+    }
+
+    .user-details {
+      display: flex;
+      align-items: center;
+      gap: 6px;
+      font-size: 14px;
+    }
+
+    .rank {
+      font-size: 18px;
+      width: 32px;
+      text-align: center;
+      margin-right: 8px;
+    }
+
+    .gift {
+      font-size: 16px;
+      margin-left: 2px;
+    }
+
+    @media (max-width: 480px) {
+      .user-name { font-size: 14px; }
+      .user-details { font-size: 12px; }
     }
   </style>
 </head>
@@ -68,45 +109,48 @@
       'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZpdXlic2NsaWZ4eGhucGtkY2ZqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDgxNDY0NDksImV4cCI6MjA2MzcyMjQ0OX0.FMM504dMKv8DclfPeGtZS7pLja0YY6d7ODgyeRdDZgg'
     );
 
-    const list = document.getElementById("list");
+    const list = document.getElementById('list');
     list.innerHTML = 'Загрузка...';
 
     try {
       const { data: allUsers, error } = await supabase
         .from("users")
-        .select("telegram_id, username, photo_url, referred_by");
+        .select("telegram_id, username, first_name, last_name, photo_url, referred_by");
 
       if (error) throw error;
 
       const leaderboard = allUsers
         .map(user => ({
           ...user,
-          name: user.username || "Без имени",
+          name: [user.first_name, user.last_name].filter(Boolean).join(" ") || user.username || "Без имени",
           referrals: allUsers.filter(u => u.referred_by === user.telegram_id).length
         }))
+        .filter(u => u.telegram_id)
         .sort((a, b) => b.referrals - a.referrals)
         .slice(0, 100);
 
       list.innerHTML = '';
 
       leaderboard.forEach((user, index) => {
-        const place = index + 1;
-        const trophy = place === 1 ? '🥇' : place === 2 ? '🥈' : place === 3 ? '🥉' : place;
+        const rank = index + 1;
+        const trophy = rank === 1 ? '🥇' : rank === 2 ? '🥈' : rank === 3 ? '🥉' : rank;
 
-        const el = document.createElement("div");
-        el.className = "user";
-        el.innerHTML = `
-          <div class="user-rank">${trophy}</div>
-          <img src="${user.photo_url || 'https://via.placeholder.com/48'}" alt="">
+        const userEl = document.createElement("div");
+        userEl.className = "user";
+        userEl.innerHTML = `
+          <div class="rank">${trophy}</div>
+          <img src="${user.photo_url || 'https://via.placeholder.com/56'}" alt="">
           <div class="user-info">
-            <div>${user.name}</div>
-            <div class="user-referrals">
-              👥 ${user.referrals} ${index < 25 ? ' 🎁' : ''}
+            <div class="user-name">${user.name}</div>
+            <div class="user-details">
+              👥 ${user.referrals}
+              ${index < 25 ? '<span class="gift">🎁</span>' : ''}
             </div>
           </div>
         `;
-        list.appendChild(el);
+        list.appendChild(userEl);
       });
+
     } catch (err) {
       console.error(err);
       list.innerHTML = 'Ошибка загрузки: ' + err.message;
@@ -114,3 +158,4 @@
   </script>
 </body>
 </html>
+
