Redesigned index page

--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
       };
 
       // Вариант пересылки сообщения, отправленного ботом заранее
-      const MESSAGE_ID = 14;
+      const MESSAGE_ID = 1;
       shareBtn.onclick = () => {
-        tg.openTelegramLink("https://t.me/GiftsCalendar_bot?start=share");
-    };
+        tg.openTelegramLink(`https://t.me/share/inline?bot=GiftsCalendar_bot&message_id=${MESSAGE_ID}`);
+      };
 
       const urlParams = new URLSearchParams(window.location.search);
       const refId = Number(urlParams.get("ref"));
