--- a/leaderboard.html
+++ b/leaderboard.html
@@ -1,65 +1,98 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>Топ 100 лидеров</title>
+  <meta charset="UTF-8" />
+  <title>Таблица лидеров</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script type="module" src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm"></script>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: #f2f2f7;
+      background-color: #f1f3f6;
       padding: 20px;
+      margin: 0;
       color: #333;
+      max-width: 600px;
+      margin-inline: auto;
     }
 
     h1 {
       text-align: center;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
       font-size: 24px;
+      color: #222;
+    }
+
+    .back-button {
+      position: fixed;
+      top: 20px;
+      left: 20px;
+      background: transparent;
+      border: none;
+      font-size: 24px;
+      cursor: pointer;
     }
 
     .user {
       display: flex;
       align-items: center;
-      background: #fff;
-      padding: 10px 12px;
-      margin-bottom: 12px;
+      background: white;
       border-radius: 12px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+      padding: 12px 16px;
+      margin-bottom: 14px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.08);
+      transition: all 0.2s ease-in-out;
+    }
+
+    .user:hover {
+      transform: scale(1.01);
     }
 
     .user img {
-      width: 48px;
-      height: 48px;
+      width: 56px;
+      height: 56px;
       border-radius: 50%;
-      margin: 0 10px;
+      margin-right: 12px;
+      object-fit: cover;
+      border: 2px solid #ddd;
     }
 
-    .user .rank {
-      font-weight: bold;
-      min-width: 24px;
+    .user-info {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-grow: 1;
+      flex-wrap: wrap;
     }
 
-    .user .name {
-      flex: 1;
+    .user-name {
       font-size: 16px;
-      font-weight: 500;
+      font-weight: 600;
+      margin-right: auto;
     }
 
-    .user .ref {
+    .user-details {
+      display: flex;
+      align-items: center;
+      gap: 6px;
       font-size: 14px;
-      white-space: nowrap;
     }
 
-    .back-button {
-      background: none;
-      border: none;
-      font-size: 22px;
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      cursor: pointer;
+    .rank {
+      font-size: 18px;
+      width: 32px;
+      text-align: center;
+      margin-right: 8px;
+    }
+
+    .gift {
+      font-size: 16px;
+      margin-left: 2px;
+    }
+
+    @media (max-width: 480px) {
+      .user-name { font-size: 14px; }
+      .user-details { font-size: 12px; }
     }
   </style>
 </head>
@@ -70,41 +103,57 @@
 
   <script type="module">
     import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
-    const supabase = createClient('https://fiuybsclifxxhnpkdcfj.supabase.co', 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...');
+
+    const supabase = createClient(
+      'https://fiuybsclifxxhnpkdcfj.supabase.co',
+      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZpdXlic2NsaWZ4eGhucGtkY2ZqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDgxNDY0NDksImV4cCI6MjA2MzcyMjQ0OX0.FMM504dMKv8DclfPeGtZS7pLja0YY6d7ODgyeRdDZgg'
+    );
 
     const list = document.getElementById('list');
+    list.innerHTML = 'Загрузка...';
 
     try {
       const { data: allUsers, error } = await supabase
         .from("users")
-        .select("telegram_id, username, photo_url, referred_by");
+        .select("telegram_id, username, first_name, last_name, photo_url, referred_by");
 
       if (error) throw error;
 
       const leaderboard = allUsers
         .map(user => ({
           ...user,
+          name: [user.first_name, user.last_name].filter(Boolean).join(" ") || user.username || "Без имени",
           referrals: allUsers.filter(u => u.referred_by === user.telegram_id).length
         }))
+        .filter(u => u.telegram_id)
         .sort((a, b) => b.referrals - a.referrals)
         .slice(0, 100);
 
       list.innerHTML = '';
+
       leaderboard.forEach((user, index) => {
-        const trophy = index === 0 ? '🥇' : index === 1 ? '🥈' : index === 2 ? '🥉' : index + 1;
-        const el = document.createElement('div');
-        el.className = 'user';
-        el.innerHTML = `
+        const rank = index + 1;
+        const trophy = rank === 1 ? '🥇' : rank === 2 ? '🥈' : rank === 3 ? '🥉' : rank;
+
+        const userEl = document.createElement("div");
+        userEl.className = "user";
+        userEl.innerHTML = `
           <div class="rank">${trophy}</div>
-          <img src="${user.photo_url || 'https://via.placeholder.com/48'}" />
-          <div class="name">@${user.username || '—'}</div>
-          <div class="ref">👥 ${user.referrals}</div>
+          <img src="${user.photo_url || 'https://via.placeholder.com/56'}" alt="">
+          <div class="user-info">
+            <div class="user-name">${user.name}</div>
+            <div class="user-details">
+              👥 ${user.referrals}
+              ${index < 25 ? '<span class="gift">🎁</span>' : ''}
+            </div>
+          </div>
         `;
-        list.appendChild(el);
+        list.appendChild(userEl);
       });
-    } catch (e) {
-      list.innerHTML = 'Ошибка загрузки';
-      console.error(e);
+
+    } catch (err) {
+      console.error(err);
+      list.innerHTML = 'Ошибка загрузки: ' + err.message;
     }
   </script>
 </body>
